# insurance-multi-agent

./: .gitignore  README.md  azure.yaml
backend/: .env.sample  AZURE_AGENT_MIGRATION.md  README.md  diagnose_fabric.py  inspect_agent.py  pyproject.toml  test_azure_claim_assessor.py
backend/app/: main.py  sample_data.py
backend/app/core/: config.py  logging_config.py  tracing.py
backend/app/models/: agent.py  agent_models.py  claim.py  evaluation.py
backend/app/services/: azure_claims_search.py  azure_search.py  azure_storage.py  claim_processing.py  content_understanding_service.py  cosmos_service.py  evaluation_service.py  lakehouse_service.py  single_agent.py  token_estimation.py  token_span_processor.py  token_tracker.py  tracked_agent.py
backend/app/workflow/: azure_agent_client.py  azure_agent_client_v2.py  azure_agent_manager.py  azure_agent_manager_v2.py  policy_search.py  supervisor.py  supervisor_v2.py  tools.py
backend/fabric/: README.md  create_data_agent.ipynb  create_data_agent.py  generate_sample_data.py  load_tables.ipynb  load_to_tables.py  requirements.txt  upload_to_fabric.py  validate_data.py
backend/fabric/agent_config/: README.md  agent_instructions.md  (+3 more)
backend/tests/: __init__.py  check_tokens.py  cleanup_agents.py  run_all_tests.py  test_agent_comparison.py  test_agents_v2.py  test_api_integration.py  test_azure_claim_assessor.py  test_azure_communication_agent.py  test_azure_messages.py  test_azure_policy_checker.py  test_azure_risk_analyst.py  test_fabric_stress.py  test_process_claim_document_tool.py  test_supervisor_v2.py
(+93 files in other folders)
